--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ path = "src/main.rs"
 [dependencies]
 retry = "1.0.0"
 clap = {version = "2.33.0", default-features = false}
+
+[profile.release]
+strip = true  # Automatically strip symbols from the binary.
+opt-level = "z"  # Optimize for size.
