--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ clap = {version = "2.33.0", default-features = false}
 [profile.release]
 strip = true  # Automatically strip symbols from the binary.
 opt-level = "z"  # Optimize for size.
+lto = true
