--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,15 @@ jobs:
         run: |
            echo "MESSAGE=$(echo '${{github.event.head_commit.message}}'|head -n 1)" >> $GITHUB_ENV
            echo "repo_name=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
-           echo "current_date=$(TZ=':America/Sao_Paulo' date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
-           echo "app_version=${GITHUB_REPOSITORY#*/}-$(TZ=':America/Sao_Paulo' date +'%Y%m%d-%H%M')" >> $GITHUB_ENV
+           echo "current_date=$(date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
+           echo "app_version=${GITHUB_REPOSITORY#*/}-$(date +'%Y%m%d-%H%M')" >> $GITHUB_ENV
            echo "release_from=${GITHUB_REF_NAME}" >> $GITHUB_ENV
 
       - name: Add new Target
         run: rustup target add x86_64-apple-darwin; rustup target add x86_64-pc-windows-gnu
 
       - name: Compile Rust App
-        run: make build; make build-win; make build-mac; make run-upx; make create-tar
+        run: make build; make build-win; make run-upx; make create-tar
 
       - name: Create Release
         id: create_release
@@ -53,6 +53,5 @@ jobs:
         run: |
            ${RETRY} gh release upload "${{env.app_version}}" ${{env.repo_name}}-linux64.tar.gz
            ${RETRY} gh release upload "${{env.app_version}}" ${{env.repo_name}}-win64.tar.gz
-           ${RETRY} gh release upload "${{env.app_version}}" ${{env.repo_name}}-mac64.tar.gz
 
 
