--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         run: mkdir -p .cargo; cp /opt/osxcross/cargo_config .cargo/config
 
       - name: Compile Rust App
-        run: make install-target; make build build-win build-mac; make run-upx; make create-tar, make get-bat
+        run: make install-target; make build build-win build-mac; make run-upx; make create-tar; make get-bat
 
       - name: Create Release
         id: create_release
